Bug 373099 - Login button not enabled
Summary: Login button not enabled
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.8.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 366604 405357 405361 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-30 06:18 UTC by Pieter Botha
Modified: 2019-07-10 15:15 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pieter Botha 2016-11-30 06:18:05 UTC
My laptop connected to a network that does not allow internet access after returning from standby. At this time Plasma crashed and when I tried to report the bug DrKonqi did not enable the login button, even after I connected to a network that does allow internet access.
Comment 1 Szczepan Hołyszewski 2017-03-01 17:16:16 UTC
Same issue here. It might be relevant that the program that crashed (KUser) was run as root with kdesu.
Comment 2 Christoph Feck 2019-02-12 20:12:55 UTC
*** Bug 404230 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2019-03-12 19:22:52 UTC
*** Bug 405361 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2019-03-12 19:22:56 UTC
*** Bug 405357 has been marked as a duplicate of this bug. ***
Comment 5 Harald Sitter 2019-07-03 12:53:36 UTC
*** Bug 366604 has been marked as a duplicate of this bug. ***
Comment 6 Harald Sitter 2019-07-10 15:15:32 UTC
Git commit e6a81b2d466b4961c50aa3e2f3bde96964f4fb5e by Harald Sitter.
Committed on 10/07/2019 at 15:15.
Pushed by sitter into branch 'master'.

fix API availability/version detection to not be terribly racey

Summary:
previously at a random point in time there'd be a call to get the bugzilla
version, that call would (hopefully) reach the login page and cause it
allow login. this is essentially a blocking safe guard to not talk to
unsupported or unreachable bugzillas. because this was entirely
synchronized there was great potential for signal and state racing
where the login page could randomly end up with a disabled login
button when the api communication failed for whatever reason.

this was further complicated by the fact that there was zero UI backing
for the entire check resulting in the login button getting disabled but
the user not having any indication as to why or any means to retry.

to resolve this problem a bunch of changes are necessary:

- bugzillalib now has an error signal when the version check fails
  (previously not having received a finished signal meant error, when in
   fact that may also mean not-yet-done)
- buzillalib also no longer automatically issues a version lookup as it
  itself has no use of knowing the version right now
- the login page logic has had all awareness of bugzilla availability
  stripped. the assumption now is that when login is reached bugzilla
  could be contacted.
- there is a new 'version' page now sorted before the login page. the
  version page's only use is to provide a UI for the version check or
  more generally if bugzilla is reachable. it has a busy state and an
  error stage, once the version check completed once the page is marked
  inappropriate and would automatically skip ahead as necessary.
  the `appropriate` value specifically allows kassistantdialog to ignore
  the page when skipping forward/backward effectively hiding the page from
  the user.
- for purposes of controlling its own appropriateness the KPageWidgetItem
  of this new page is controlled by the page itself, a design which
  IMO should be also adopted for the other pages
- for visual consistency with plasma a qml busyindicator is used on the
  page. also looks nicer than the ksquencepixmap thingy

The result of this is that upon startup of the dialog, the version page
is created (albeit not visible) and issues a version check. When that
returns the page turns itself inappropriate (and skips ahead if necessary).
Ideally this means the user never sees the page, unless there is an error
in which case the page will block progressing to actually submit the
error to bugzilla. At the same time the user can choose to go back to the
backtrace page to manually grab it and file a bug in the event that
drkonqi cannot get beyond the version page.
Related: bug 354292
FIXED-IN: 5.17.0
CHANGELOG: Contact to drkonqi is now more reliably verified and the login button enabled when possible

Test Plan:
- slow internet results in page to show up
- errors result in page to go into error state
- fast internet lets the page not show up
- retry button retries when there was an error on first try
- page switches between states correctly

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22326

M  +2    -0    src/CMakeLists.txt
A  +81   -0    src/bugzillaintegration/assistantpage_bugzilla_version.cpp     [License: GPL (v2+)]
A  +46   -0    src/bugzillaintegration/assistantpage_bugzilla_version.h     [License: GPL (v2+)]
M  +1    -6    src/bugzillaintegration/bugzillalib.cpp
M  +1    -2    src/bugzillaintegration/bugzillalib.h
M  +18   -1    src/bugzillaintegration/reportassistantdialog.cpp
M  +4    -3    src/bugzillaintegration/reportassistantdialog.h
M  +6    -14   src/bugzillaintegration/reportassistantpages_bugzilla.cpp
M  +0    -1    src/bugzillaintegration/reportassistantpages_bugzilla.h
A  +158  -0    src/bugzillaintegration/ui/assistantpage_bugzilla_version.ui
M  +1    -0    src/drkonqi_globals.h

https://commits.kde.org/drkonqi/e6a81b2d466b4961c50aa3e2f3bde96964f4fb5e